[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/structures/structure_chest.png" type="Texture" id=1]
[ext_resource path="res://src/structures/Structure_Storage_Chest.gd" type="Script" id=2]
[ext_resource path="res://src/Inventory.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[node name="Structure_Storage_Chest" type="StaticBody2D" groups=["saveable"]]
script = ExtResource( 2 )

[node name="Chest" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
centered = false

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 24, 24 )
shape = SubResource( 3 )

[node name="UseButton" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 48.0
margin_bottom = 48.0
button_mask = 3

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="mouse_entered" from="UseButton" to="." method="_on_touch"]
[connection signal="mouse_exited" from="UseButton" to="." method="_on_untouch"]
[connection signal="pressed" from="UseButton" to="." method="_on_use"]
